# heigvd-pro-b-13

./: BD.mdj  README.md  pro-19_crebas.sql
GALGO-2.0/: CMakeLists.txt
GALGO-2.0/src/: Chromosome.hpp  Converter.hpp  Evolution.hpp  Galgo.hpp  GeneticAlgorithm.hpp  Population.hpp  example.cpp  run
MegaMachineEvolution/: MegaMachineEvolution.pro  MegaMachineEvolution.pro.user.a12517d.21  MegaMachineEvolution.pro.user.a5bceec  dispatcher.cpp  dispatcher.h  result.txt  sequences3
MegaMachineEvolution/GALGO/: Chromosome.hpp  Converter.hpp  Evolution.hpp  GeneticAlgorithm.hpp  Parameter.hpp  Population.hpp  Randomize.hpp  example.cpp
MegaMachineEvolution/GUI/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oldmain.cpp  (+3 more)
Parsing_XML/: exportedValue  main.py  minimouse.xml  outputLoc.sql  outputProt.sql  outputProtLoc.sql  outputProtLoc2.sql  outputProtType.sql  outputType.sql  script.py  test.py
StateMachines/: StateMachines.pro  StateMachines.pro.user.010d913  StateMachines.pro.user.0439905.4.8-pre1  emitteracgt.cpp  emitteracgt.h  machine.scxml  main.cpp  megamachine.cpp  megamachine.h  megamachinemanager.cpp  megamachinemanager.h  task.cpp  task.h  umlstatemachines.qmodel  utils.h
build-MegaMachineEvolution-Desktop-Debug/: Makefile  moc_dispatcher.cpp  moc_emitteracgt.cpp  moc_mainwindow.cpp  moc_megamachine.cpp  moc_megamachinemanager.cpp  moc_parameterwindow.cpp  ui_mainwindow.h  ui_parameterwindow.h
test/: emitteracgt.cpp  emitteracgt.h  handler.cpp  handler.h  main.cpp  megamachine.cpp  megamachine.h  statetest.cpp  statetest.h  test.pro  test.scxml
(+30 files in other folders)
